src/test/deca/syntax/parser/valid/eq/eq_string_eq_float.deca
{
"chaine" == 10.5;
}