src/test/deca/syntax/parser/invalid/invalid_float_format4.deca
// Parser test, invalid float format

{
    float x = 1.2e+1.5;
}